Fix bench pieces modal z-index

--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,7 @@
   flex-wrap: wrap;
   width: 12vh;
   height: 48vh;
+  z-index: 3;
 }
 
 .bench-square {
